--- a/Index.html
+++ b/Index.html
@@ -10,12 +10,10 @@
   <div class="container">
         <div class="row">
             <div class="col-6">
-                <img src=" "class="img thumbnail" style="width:400px;height:500px;"/><br>
+                <img src="Snapchat-1565417146.jpg "class="img thumbnail" style="width:400px;height:500px;"/><br>
                 <button class="btn btn-primary" type="button"> Like </br>
            
         </div>
-        <div class="content">
-            <p>This is a paragraph of text inside a styled container.</p>
         </div>
   </div>
 </body>
