--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
             <div class="col-6">
                 <img src="Snapchat-1565417146.jpg "class="img thumbnail" style="width:400px;height:500px;"/><br>
                 <button class="btn btn-primary" type="button"> Like </br>
+                 <img src="FB_IMG_1714718835554.jpg" class="img thumbnail" style="width:400px;height:500px;"/><br>
+                <button class="btn btn-primary" type="button"> Like </br>
+           
            
         </div>
         </div>
