--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="container">
     <div class="row">
       <div class="col-6">
-        <img src="IMG20240516150313.jpg" class="img-thumbnail" style="width:600px; height:500px;"/> <br>
+        <img src="Snapchat-1565417146.jpg" class="img-thumbnail" style="width:600px; height:500px;"/> <br>
         <button class="btn btn-primary" type="button"> Like </button>
       </div>
       <div class="col-6">
