--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <button class="btn btn-primary" type="button"> Like </button>
       </div>
       <div class="col-6">
-        <img src="FB.jpg" class="img-thumbnail" style="width:600px; height:500px;"/> <br>
+        <img src="FB_IMG_1714718835554.jpg" class="img-thumbnail" style="width:600px; height:500px;"/> <br>
         <button class="btn btn-primary" type="button"> Like </button>
       </div>
     </div>
