--- a/index.html
+++ b/index.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
-<title> Survey About My Picture </title>
-
+<html>
 <head>
+  <title>Survey About My Picture</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <style>
+    body {
+      background-image: url('background.jpg');
+      background-size: cover;
+      background-repeat: no-repeat;
+    }
+  </style>
 </head>
-
 <body>
   <div class="container">
     <div class="row">
       <div class="col-6">
-        <img src="Snapchat-1565417146.jpg" class="img-thumbnail" style="width:600px; height:500px;"/> <br>
-        <button class="btn btn-primary" type="button"> Like </button>
+        <img src="IMG20240516150313.jpg" class="img-thumbnail" style="width:600px; height:500px;"/> <br>
+        <button class="btn btn-primary" type="button">Like</button>
       </div>
       <div class="col-6">
-        <img src="FB_IMG_1714718835554.jpg" class="img-thumbnail" style="width:600px; height:500px;"/> <br>
-        <button class="btn btn-primary" type="button"> Like </button>
+        <img src="IMG20240517160233.jpg" class="img-thumbnail" style="width:600px; height:500px;"/> <br>
+        <button class="btn btn-primary" type="button">Like</button>
       </div>
     </div>
   </div>
- 
 </body>
-
 </html>
