--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
   <div class="container">
     <div class="row">
       <div class="col-6">
-        <img src="IMG20240516150313.jpg" class="img-thumbnail" style="width:600px; height:500px;"/> <br>
+        <img src="FB_IMG_1714718835554.jpg" class="img-thumbnail" style="width:600px; height:500px;"/> <br>
         <button class="btn btn-primary" type="button">Like</button>
       </div>
       <div class="col-6">
-        <img src="IMG20240517160233.jpg" class="img-thumbnail" style="width:600px; height:500px;"/> <br>
+        <img src="Snapchat-1565417146.jpg" class="img-thumbnail" style="width:600px; height:500px;"/> <br>
         <button class="btn btn-primary" type="button">Like</button>
       </div>
     </div>
