--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <style>
     body {
-      background-image: url('background.jpg');
+      background-image: url('information-technology-artificial-intelligence-3lmq7rank0v68rhk.jpg');
       background-size: cover;
       background-repeat: no-repeat;
     }
