--- a/index.html
+++ b/index.html
@@ -1,29 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Survey About My Picture</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  <style>
-    body {
-      background-image: url('information-technology-artificial-intelligence-3lmq7rank0v68rhk.jpg');
-      background-size: cover;
-      background-repeat: no-repeat;
-    }
-  </style>
+ <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
-<body>
-  <div class="container">
-    <div class="row">
-      <div class="col-6">
-        <img src="FB_IMG_1714718835554.jpg" class="img-thumbnail" style="width:600px; height:500px;"/> <br>
-        <button class="btn btn-primary" type="button">Like</button>
-      </div>
-      <div class="col-6">
-        <img src="Snapchat-1565417146.jpg" class="img-thumbnail" style="width:600px; height:500px;"/> <br>
-        <button class="btn btn-primary" type="button">Like</button>
-      </div>
+<body> 
+<div class="container">
+  <div class="row">
+    <div class="col-6">
+      <img src="Snapchat-1565417146.jpg " class="img-thumbnail" style="width:400px;height:500px;"/><br>
+      <button class="btn btn-primary like-btn" type="button" id="btnLike1"> Like </button>
+  <output id="countLike1">0</output>
+    </div>
+    <div class="col-6">
+      <img src="FB_IMG_1714718835554.jpg " class="img-thumbnail" style="width:400px;height:500px;"/><br>
+      <button class="btn btn-primary like-btn" type="button"id="btnLike2"> Like </button>
+  <output id="countLike2">0</output>
     </div>
   </div>
+<script src="index.js"></script>
 </body>
 </html>
