--- a/index.html
+++ b/index.html
@@ -22,5 +22,16 @@
     </div>
   </div>
 <script src="index.js"></script>
+  <div class="container">
+  <h2>Comments</h2>
+  <div id="comments">
+    <!-- Comments will be displayed here -->
+  </div>
+  <div class="form-group">
+    <label for="comment">Leave a comment:</label>
+    <textarea class="form-control" id="comment" rows="3"></textarea>
+  </div>
+  <button type="button" class="btn btn-primary" id="btnSubmit">Submit</button>
+</div>
 </body>
 </html>
