--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-<!DOCTYPE html> <html lang="en"> <head> <meta charset="UTF-8"> <meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>Survey About My Picture</title> <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> </head> <body> <div class="container"> <div class="row"> <div class="col-6"> <img src="Snapchat-1565417146.jpg" class="img-thumbnail" style="width:400px;height:500px;"/><br> <button class="btn btn-primary like-btn" type="button" id="btnLike1"> Like </button> <button class="btn btn-primary dislike-btn" type="button" id="btnDislike1"> Dislike </button> <output id="countLike1">0</output> <output id="countDislike1">0</output> </div> <div class="col-6"> <img src="FB_IMG_1714718835554.jpg" class="img-thumbnail" style="width:400px;height:500px;"/><br> <button class="btn btn-primary like-btn" type="button" id="btnLike2"> Like </button> <button class="btn btn-primary dislike-btn" type="button" id="btnDislike2"> Dislike </button> <output id="countLike2">0</output> <output id="countDislike2">0</output> </div> </div> <div class="container"> <h2>Comments</h2> <div id="comments"> <!-- Comments will be displayed here --> </div> <div class="form-group"> <label for="comment">Leave a comment:</label> <textarea class="form-control" id="comment" rows="3"></textarea> </div> <button type="button" class="btn btn-primary" id="btnSubmit">Submit</button> </div> </div> <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"> </body> </html>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Survey About My Picture</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+</head>
+<body style="background-image: url('background.jpg'); background-size: cover; background-repeat: no-repeat;">
+  <div class="container">
+    <div class="row">
+      <div class="col-6">
+        <img src="436639996_465304259490251_5665471310893415159_n.jpg" class="img-thumbnail" style="width:600px; height:500px; animation: moveAd 4s infinite;"/> <br>
+        <button style="background-color: #28a745; color: white; border: none; padding: 10px 20px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px; cursor: pointer;">Like</button>
+      </div>
+      <div class="col-6">
+        <img src="441956746_2824064917749389_764750261627693797_n.jpg" class="img-thumbnail" style="width:600px; height:500px;"/> <br>
+        <button style="background-color: blue; color: white; border: none; padding: 10px 20px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px; cursor: pointer;">Comment</button>
+      </div>
+    </div>
+  </div>
+</body>
+</html>
