--- a/index.html
+++ b/index.html
@@ -1,37 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Survey About My Picture</title>
- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-</head>
-<body> 
-<div class="container">
-  <div class="row">
-    <div class="col-6">
-      <img src="Snapchat-1565417146.jpg " class="img-thumbnail" style="width:400px;height:500px;"/><br>
-      <button class="btn btn-primary like-btn" type="button" id="btnLike1"> Like </button>
-  <output id="countLike1">0</output>
-    </div>
-    <div class="col-6">
-      <img src="FB_IMG_1714718835554.jpg " class="img-thumbnail" style="width:400px;height:500px;"/><br>
-      <button class="btn btn-primary like-btn" type="button"id="btnLike2"> Like </button>
-  <output id="countLike2">0</output>
-    </div>
-  </div>
-<script src="index.js"></script>
-  <div class="container">
-  <h2>Comments</h2>
-  <div id="comments">
-    <!-- Comments will be displayed here -->
-  </div>
-  <div class="form-group">
-    <label for="comment">Leave a comment:</label>
-    <textarea class="form-control" id="comment" rows="3"></textarea>
-  </div>
-  <button type="button" class="btn btn-primary" id="btnSubmit">Submit</button>
-</div>
-</body>
+      <title>me and my</title>
+      <head>  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
+                rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+                crossorigin="anonymous"> 
+              <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity=
+                "sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+      </head>
+      <body>
+
+         <div class="container">
+          <div class="row">
+           <div class="col-4">
+              <img src="Snapchat-1565417146.jpg " class="img-thumbnail" style="widtg:400px; height:500px;"/> <br>
+             <button class="btn btn-primary" type=button id="btnLike1"> Like </button>
+                   <output id="countLikes1">0</output>
+                   <button class="btn btn-primary" type=button id="btndisLike1"> disLike </button>
+                 <output id="countdisLikes1">0</output>
+          
+           </div>
+             <div class="col-4">
+             <img src="FB_IMG_1714718835554.jpg" class="img-thumbnail" style="widtg:400px; height:500px;"/> <br>
+             <button class="btn btn-primary" type=button id="btnLike2"> Like </button>
+                   <output id="countLikes2">0</output>
+                   <button class="btn btn-primary" type=button id="btndisLike2"> disLike </button>
+                 <output id="countdisLikes2">0</output>
+           </div>
+                <div class="col-4">
+                      Comments<br>
+                      <input type="text" class="form-control" id="comment"/>
+                      <button class="btn btn-success" id="submit">Submit</button>
+                      <textarea class="form-control" id="commentbox" rows="20"></textarea>
+                </div>
+          </div>
+         </div>
+        <script src="index.js"></script>
+      </body>
 </html>
