--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
       <title>me and my</title>
       <head>  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
                 rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
@@ -35,4 +36,25 @@
          </div>
         <script src="index.js"></script>
       </body>
+      <!-- Picture 1 -->
+<div>
+    <button id="btnLike1">Like</button>
+    <span>Likes: <span id="countLike1">0</span></span>
+    <button id="btnDisLike1">Dislike</button>
+    <span>Dislikes: <span id="countDisLike1">0</span></span>
+    <input type="text" id="comment1" placeholder="Enter your comment">
+    <button onclick="saveComment(1)">Submit Comment</button>
+    <div id="commentSection1"></div>
+</div>
+
+<!-- Picture 2 -->
+<div>
+    <button id="btnLike2">Like</button>
+    <span>Likes: <span id="countLike2">0</span></span>
+    <button id="btnDisLike2">Dislike</button>
+    <span>Dislikes: <span id="countDisLike2">0</span></span>
+    <input type="text" id="comment2" placeholder="Enter your comment">
+    <button onclick="saveComment(2)">Submit Comment</button>
+    <div id="commentSection2"></div>
+</div>
 </html>
