--- a/index.html
+++ b/index.html
@@ -10,22 +10,31 @@
       <body>
 
          <div class="container">
-          <div class="row">
-           <div class="col-4">
-              <img src="Snapchat-1565417146.jpg " class="img-thumbnail" style="widtg:400px; height:500px;"/> <br>
-             <button class="btn btn-primary" type=button id="btnLike1"> Like </button>
-                   <output id="countLikes1">0</output>
-                   <button class="btn btn-primary" type=button id="btndisLike1"> disLike </button>
-                 <output id="countdisLikes1">0</output>
-          
-           </div>
-             <div class="col-4">
-             <img src="FB_IMG_1714718835554.jpg" class="img-thumbnail" style="widtg:400px; height:500px;"/> <br>
-             <button class="btn btn-primary" type=button id="btnLike2"> Like </button>
-                   <output id="countLikes2">0</output>
-                   <button class="btn btn-primary" type=button id="btndisLike2"> disLike </button>
-                 <output id="countdisLikes2">0</output>
-           </div>
+    <div class="row">
+        <div class="col-4">
+            <img src="Snapchat-1565417146.jpg" class="img-thumbnail" style="width:400px; height:500px;"/><br>
+            <button class="btn btn-primary" type="button" id="btnLike1">Like</button>
+            <output id="countLikes1">0</output>
+            <button class="btn btn-primary" type="button" id="btnDislike1">Dislike</button>
+            <output id="countDislikes1">0</output>
+            <button class="btn btn-primary" type="button" id="btnHaha1">Haha React</button>
+            <output id="countHaha1">0</output>
+            <button class="btn btn-primary" type="button" id="btnHeart1">Heart React</button>
+            <output id="countHeart1">0</output>
+        </div>
+        <div class="col-4">
+            <img src="FB_IMG_1714718835554.jpg" class="img-thumbnail" style="width:400px; height:500px;"/><br>
+            <button class="btn btn-primary" type="button" id="btnLike2">Like</button>
+            <output id="countLikes2">0</output>
+            <button class="btn btn-primary" type="button" id="btnDislike2">Dislike</button>
+            <output id="countDislikes2">0</output>
+            <button class="btn btn-primary" type="button" id="btnHaha2">Haha React</button>
+            <output id="countHaha2">0</output>
+            <button class="btn btn-primary" type="button" id="btnHeart2">Heart React</button>
+            <output id="countHeart2">0</output>
+        </div>
+    </div>
+</div>
                 <div class="col-4">
                       <input type="text" id="comment2" placeholder="Enter your comment">
                       <button onclick="saveComment(2)">Submit Comment</button>
