--- a/index.html
+++ b/index.html
@@ -3,21 +3,33 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Survey About My Picture</title>
+  <title>Facebook-like Dashboard</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body> 
   <div class="container">
     <div class="row">
       <div class="col-6">
-        <img src="pic1.jpg" class="img-thumbnail" style="width:400px;height:500px;"/><br>
+        <img src="image1.jpg" class="img-thumbnail" style="width:400px;height:500px;"/><br>
         <button class="btn btn-primary like-btn" type="button" id="btnLike1">👍 Like </button>
+        <button class="btn btn-danger dislike-btn" type="button" id="btnDislike1">👎 Dislike </button>
         <output id="countLike1">0</output>
+        <output id="countDislike1">0</output>
+        <br>
+        <textarea id="comment1" placeholder="Enter your comment"></textarea>
+        <button class="btn btn-primary" type="button" id="submitComment1">Submit Comment</button>
+        <div id="commentSection1"></div>
       </div>
       <div class="col-6">
-        <img src="pic2.jpg" class="img-thumbnail" style="width:400px;height:500px;"/><br>
+        <img src="image2.jpg" class="img-thumbnail" style="width:400px;height:500px;"/><br>
         <button class="btn btn-primary like-btn" type="button" id="btnLike2">👍 Like </button>
+        <button class="btn btn-danger dislike-btn" type="button" id="btnDislike2">👎 Dislike </button>
         <output id="countLike2">0</output>
+        <output id="countDislike2">0</output>
+        <br>
+        <textarea id="comment2" placeholder="Enter your comment"></textarea>
+        <button class="btn btn-primary" type="button" id="submitComment2">Submit Comment</button>
+        <div id="commentSection2"></div>
       </div>
     </div>
   </div>
