--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Ralph Cellphone Store</title>
+<title>Cellphone Store</title>
 <style>
     body {
         font-family: Arial, sans-serif;
@@ -24,6 +24,11 @@
         border: 1px solid #ccc;
         padding: 10px;
     }
+    .product img {
+        width: 100px;
+        height: 100px;
+        margin-bottom: 10px;
+    }
 </style>
 </head>
 <body>
@@ -31,10 +36,18 @@
     <div class="cellphone">
         <h2>Cellphone Store</h2>
         <div class="product">
-            <h3>Cellphone Name</h3>
-            <p>Price: $<span id="price">500</span></p>
-            <input type="number" id="quantity" placeholder="Quantity">
-            <button onclick="addToCart()">Add to Cart</button>
+            <img src="cellphone1.jpg" alt="Cellphone 1">
+            <h3>Brand: Brand 1</h3>
+            <p>Price: $<span id="price1">500</span></p>
+            <input type="number" id="quantity1" placeholder="Quantity">
+            <button onclick="addToCart(1)">Add to Cart</button>
+        </div>
+        <div class="product">
+            <img src="cellphone2.jpg" alt="Cellphone 2">
+            <h3>Brand: Brand 2</h3>
+            <p>Price: $<span id="price2">700</span></p>
+            <input type="number" id="quantity2" placeholder="Quantity">
+            <button onclick="addToCart(2)">Add to Cart</button>
         </div>
     </div>
     <div class="orders">
@@ -48,5 +61,6 @@
         <button onclick="gcashTransfer()">GCash Transfer</button>
     </div>
 </div>
+<script src="script.js"></script>
 </body>
 </html>
