--- a/index.html
+++ b/index.html
@@ -1,73 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Cellphone Store</title>
-<style>
-    body {
-        font-family: Arial, sans-serif;
-        margin: 0;
-        padding: 0;
-    }
-    .container {
-        display: flex;
-        justify-content: space-between;
-        align-items: flex-start;
-        padding: 20px;
-    }
-    .cellphone {
-        width: 60%;
-    }
-    .orders {
-        width: 30%;
-        border: 1px solid #ccc;
-        padding: 10px;
-    }
-    .product img {
-        width: 100px;
-        height: 100px;
-        margin-bottom: 10px;
-    }
-    .payment-icons {
-        display: flex;
-        justify-content: space-between;
-        margin-top: 10px;
-    }
-</style>
 </head>
 <body>
 <div class="container">
-    <div class="cellphone">
-        <h2>Cellphone Store</h2>
-        <div class="product">
-            <img src="cellphone1.jpg" alt="Cellphone 1">
-            <h3>Brand: Brand 1</h3>
-            <p>Price: $<span id="price1">500</span></p>
-            <input type="number" id="quantity1" placeholder="Quantity" oninput="addToCart(1)">
-        </div>
-        <div class="product">
-            <img src="cellphone2.jpg" alt="Cellphone 2">
-            <h3>Brand: Brand 2</h3>
-            <p>Price: $<span id="price2">700</span></p>
-            <input type="number" id="quantity2" placeholder="Quantity" oninput="addToCart(2)">
+    <div class="row">
+        <div class="col-12 text-center">
+            <h2>AT Cellphone Store</h2>
+            <hr class="hr" />
         </div>
     </div>
-    <div class="orders">
-        <h2>Orders</h2>
-        <ul id="orderList"></ul>
-        <hr>
-        <p>Total Price: $<span id="totalPrice">0</span></p>
-        <input type="number" id="cash" placeholder="Enter Cash">
-        <button onclick="calculateChange()">Calculate Change</button>
-        <p id="change"></p>
-        <div class="payment-icons">
-            <img src="gcash_icon.png" alt="GCash" onclick="gcashTransfer()">
-            <img src="paymaya_icon.png" alt="PayMaya" onclick="payMayaTransfer()">
+    <div class="row">
+        <div class="col-4 text-center">
+            <label for="product1">Samsung S21</label>
+            <img src="images/s21.png" style="width:400px; height:500px;" class="img-thumbnail"/><br>
+            <label for="price1">27000.00</label>
+            <input type="number" class="form-control" id="qty1" placeholder="Enter quantity"/><br>
+        </div>
+        <div class="col-4 text-center">
+            <label for="product2">Samsung S22</label>
+            <img src="images/s22.png" style="width:400px; height:500px;" class="img-thumbnail"/><br>
+            <label for="price2">37000.00</label>
+            <input type="number" class="form-control" id="qty2" placeholder="Enter quantity"/><br>
+        </div>
+        <div class="col-4">
+            <label for="carts">Orders</label><br>
+            <textarea class="form-control" rows="29" id="carts" cols="200" readonly style="width:350px; height:400px; font-size:12px"></textarea><br>
+            <input type="text" class="form-control border-0" id="total" readonly placeholder="Total"/><br>
+            <input type="number" class="form-control" id="cash" placeholder="Cash Tendered"/><br>
+            <input type="text" class="form-control border-0" id="change" readonly placeholder="Change"/>
         </div>
     </div>
 </div>
+<script src="app.js"></script>
 </body>
-    <script src="script.js"></script>
 </html>
-
