--- a/index.html
+++ b/index.html
@@ -1,37 +1,62 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>Cellphone Store</title>
+  <style>
+    /* Add some basic styling to make the page look nicer */
+    body {
+      font-family: Arial, sans-serif;
+    }
+    #container {
+      width: 500px;
+      margin: 40px auto;
+      background-color: #f0f0f0;
+      padding: 20px;
+      border: 1px solid #ccc;
+      border-radius: 10px;
+    }
+    #orders {
+      font-size: 18px;
+      font-weight: bold;
+    }
+    #total {
+      font-size: 24px;
+      font-weight: bold;
+      color: #00698f;
+    }
+  </style>
 </head>
 <body>
-<div class="container">
-    <div class="row">
-        <div class="col-12 text-center">
-            <h2>AT Cellphone Store</h2>
-            <hr class="hr" />
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-4 text-center">
-            <label for="product1">Samsung S21</label>
-            <img src="images/s21.png" style="width:400px; height:500px;" class="img-thumbnail"/><br>
-            <label for="price1">27000.00</label>
-            <input type="number" class="form-control" id="qty1" placeholder="Enter quantity"/><br>
-        </div>
-        <div class="col-4 text-center">
-            <label for="product2">Samsung S22</label>
-            <img src="images/s22.png" style="width:400px; height:500px;" class="img-thumbnail"/><br>
-            <label for="price2">37000.00</label>
-            <input type="number" class="form-control" id="qty2" placeholder="Enter quantity"/><br>
-        </div>
-        <div class="col-4">
-            <label for="carts">Orders</label><br>
-            <textarea class="form-control" rows="29" id="carts" cols="200" readonly style="width:350px; height:400px; font-size:12px"></textarea><br>
-            <input type="text" class="form-control border-0" id="total" readonly placeholder="Total"/><br>
-            <input type="number" class="form-control" id="cash" placeholder="Cash Tendered"/><br>
-            <input type="text" class="form-control border-0" id="change" readonly placeholder="Change"/>
-        </div>
-    </div>
-</div>
-<script src="app.js"></script>
+  <div id="container">
+    <h1>Cellphone Store</h1>
+    <form id="cellphone-form">
+      <label for="brand">Brand:</label>
+      <select id="brand" name="brand">
+        <option value="apple">Apple</option>
+        <option value="samsung">Samsung</option>
+        <option value="google">Google</option>
+        <option value="huawei">Huawei</option>
+      </select>
+      <br><br>
+      <label for="model">Model:</label>
+      <select id="model" name="model">
+        <!-- add options for different cellphone models -->
+        <option value="iphone-13">iPhone 13</option>
+        <option value="samsung-galaxy-s21">Samsung Galaxy S21</option>
+        <option value="pixel-4a">Pixel 4a</option>
+        <option value="huawei-p30-pro">Huawei P30 Pro</option>
+      </select>
+      <br><br>
+      <label for="quantity">Quantity:</label>
+      <input type="number" id="quantity" name="quantity" value="1">
+      <br><br>
+      <button id="add-to-cart">Add to Cart</button>
+    </form>
+    <div id="orders"></div>
+    <div id="total"></div>
+    <input type="text" id="cash" placeholder="Enter cash amount">
+    <button id="calculate-change">Calculate Change</button>
+    <div id="change"></div>
+  </div>
 </body>
 </html>
