--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
       <label for="model">Model:</label>
       <select id="model" name="model">
         <!-- add options for different cellphone models -->
-        <option value="iphone-13">iPhone 13</option>
-        <option value="samsung-galaxy-s21">Samsung Galaxy S21</option>
-        <option value="pixel-4a">Pixel 4a</option>
-        <option value="huawei-p30-pro">Huawei P30 Pro</option>
+        <option value="iphone-13" price="999" image="iphone-13.jpg">iPhone 13 ($999)</option>
+        <option value="samsung-galaxy-s21" price="799" image="samsung-galaxy-s21.jpg">Samsung Galaxy S21 ($799)</option>
+        <option value="pixel-4a" price="399" image="pixel-4a.jpg">Pixel 4a ($399)</option>
+        <option value="huawei-p30-pro" price="699" image="huawei-p30-pro.jpg">Huawei P30 Pro ($699)</option>
       </select>
       <br><br>
       <label for="quantity">Quantity:</label>
@@ -57,6 +57,13 @@
     <input type="text" id="cash" placeholder="Enter cash amount">
     <button id="calculate-change">Calculate Change</button>
     <div id="change"></div>
+
+    <!-- images -->
+    <img src="" id="iphone-13-image">
+    <img src="" id="samsung-galaxy-s21-image">
+    <img src="" id="pixel-4a-image">
+    <img src="" id="huawei-p30-pro-image">
+
   </div>
-</body>
+  </body>
 </html>
